--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       apiKey: "AIzaSyCR49PWmvnVcDkt2139IBowGGIFNwRRkiE",
       authDomain: "homepage-1-3fff8.firebaseapp.com",
       projectId: "homepage-1-3fff8",
-      storageBucket: "homepage-1-3fff8.firebasestorage.app",
+      storageBucket: "homepage-1-3fff8.appspot.com",
       messagingSenderId: "575245538383",
       appId: "1:575245538383:web:62f86b864ca2fcae49c63a"
     };
